--- a/tictactoe/tictactoe.html
+++ b/tictactoe/tictactoe.html
@@ -312,7 +312,7 @@
         let exitGameBtn = document.querySelector('#exit-btn');
 
         exitGameBtn.addEventListener('click', () => {
-            window.location.href = '../menu.html'; // Redirects to a blank page
+            window.location.href = '../index.html'; // Redirects to a blank page
         });
 
     // Ensure settings menu starts hidden
@@ -334,12 +334,12 @@
 
     // Home button functionality
         homeBtn.addEventListener("click", function () {
-            window.location.href = '../menu.html'; // Adjust if needed;
+            window.location.href = '../index.html'; // Adjust if needed;
         });
 
     // Exit Game functionality
         exitBtn.addEventListener("click", function () {
-            window.location.href = '../menu.html'; // Adjust if needed;
+            window.location.href = '../index.html'; // Adjust if needed;
         });
 
     // Hide menu when clicking outside
